[gd_scene load_steps=4 format=3 uid="uid://dj6uthe21hwao"]

[ext_resource type="Script" path="res://scenes/Character/character.gd" id="1_0tijo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3wybk"]
size = Vector3(1.5, 2, 2)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cjlge"]

[node name="Character" type="CharacterBody3D" groups=["Jogadores"]]
motion_mode = 1
script = ExtResource("1_0tijo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["Jogadores"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0.242, -0.001)
shape = SubResource("BoxShape3D_3wybk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." groups=["Jogadores"]]
mesh = SubResource("CapsuleMesh_cjlge")

[node name="Can_dash" type="Timer" parent="."]
one_shot = true

[node name="Dashing" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Can_dash" to="." method="_on_can_dash_timeout"]
[connection signal="timeout" from="Dashing" to="." method="_on_dashing_timeout"]
